log
Fri Mar 11 18:54:01 HSP 2022: 
 tests:  0|7
total_score: 0/70
a909887
Fri Mar 11 18:55:41 HSP 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:8: error: 'a' redeclared as different kind of symbol
    int a, b, c;
        ^
exercises.c:14:15: note: previous definition of 'a' was here
 void suma(int a, int b, int * c) {
               ^
exercises.c:15:11: error: 'b' redeclared as different kind of symbol
    int a, b, c;
           ^
exercises.c:14:22: note: previous definition of 'b' was here
 void suma(int a, int b, int * c) {
                      ^
exercises.c:15:14: error: 'c' redeclared as different kind of symbol
    int a, b, c;
              ^
exercises.c:14:31: note: previous definition of 'c' was here
 void suma(int a, int b, int * c) {
                               ^
exercises.c:20:11: error: 'return' with a value, in function returning void [-Werror]
    return 0;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c:16:11: error: unused variable 'i' [-Werror=unused-variable]
    size_t i;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
6cbafc5
Fri Mar 11 19:44:25 HSP 2022: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|6
total_score: 10/70
83842d6
Sat Mar 12 17:47:27 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:65:17: error: "/*" within comment [-Werror=comment]
    return NULL; /*
                  
exercises.c:68:1: error: "/*" within comment [-Werror=comment]
 /*
  
test.c:103:6: error: 'nombre' redeclared as different kind of symbol
 char nombre[30]; int edad;
      ^~~~~~
In file included from test.c:5:0:
exercises.c:57:28: note: previous definition of 'nombre' was here
 Persona* crearPersona(char nombre[], char rut[], int edad) {
                            ^~~~~~
test.c:103:22: error: 'edad' redeclared as different kind of symbol
 char nombre[30]; int edad;
                      ^~~~
In file included from test.c:5:0:
exercises.c:57:54: note: previous definition of 'edad' was here
 Persona* crearPersona(char nombre[], char rut[], int edad) {
                                                      ^~~~
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
test.c:266:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7522074
Sat Mar 12 18:35:52 HSP 2022: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  3|4
total_score: 30/70
153f85d
Sat Mar 12 19:02:40 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
f4aeb37
Sat Mar 12 19:48:23 HSP 2022: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:10: error: expected identifier or '(' before '->' token
    Vector->capacidad = n;
          ^~
exercises.c: In function 'asignarValor':
exercises.c:93:4: error: invalid type argument of unary '*' (have 'Vector {aka struct <anonymous>}')
    *v[i] = valor;
    ^~~~~
exercises.c: In function 'obtenerValor':
exercises.c:103:10: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor = v[i];
          ^
Compilation failed
9846593
Sat Mar 12 19:55:37 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:102:10: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor = v[i];
          ^
Compilation failed
b60eb9d
Sat Mar 12 19:59:57 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:93:11: error: 'return' with a value, in function returning void [-Werror]
    return NULL;
           ^~~~
exercises.c:92:6: note: declared here
 void asignarValor(Vector * v, int i, int valor) {
      ^~~~~~~~~~~~
exercises.c: In function 'obtenerValor':
exercises.c:103:10: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor = v[i];
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
f86a7e6
Sat Mar 12 20:05:38 HSP 2022: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:102:10: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor = v[i];
          ^
test.c: In function 'test_asignarObtenerValor':
test.c:160:5: error: implicit declaration of function 'asignarValor' [-Werror=implicit-function-declaration]
     asignarValor(v, 0, a);
     ^~~~~~~~~~~~
test.c: In function 'test_sumaV':
test.c:211:5: error: implicit declaration of function 'sumaV' [-Werror=implicit-function-declaration]
     sumaV(v1, v2, v3);
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c3792b4
Sat Mar 12 20:09:23 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
test.c: In function 'test_asignarObtenerValor':
test.c:160:5: error: implicit declaration of function 'asignarValor' [-Werror=implicit-function-declaration]
     asignarValor(v, 0, a);
     ^~~~~~~~~~~~
test.c:164:13: error: implicit declaration of function 'obtenerValor' [-Werror=implicit-function-declaration]
     int val=obtenerValor(v,0);
             ^~~~~~~~~~~~
test.c: In function 'test_sumaV':
test.c:211:5: error: implicit declaration of function 'sumaV' [-Werror=implicit-function-declaration]
     sumaV(v1, v2, v3);
     ^~~~~
test.c: In function 'test_sumaV2':
test.c:231:5: error: implicit declaration of function 'sumaV2' [-Werror=implicit-function-declaration]
     sumaV2(a1,a2,b1,b2,c);
     ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1277acc
Sat Mar 12 20:15:57 HSP 2022: 
 exercises.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:108:10: error: return makes integer from pointer without a cast [-Werror=int-conversion]
   return NULL;
          ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1cfc327
Sat Mar 12 20:18:45 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
cd91036
